erDiagram
    ROLE_PERMISSIONS ||--o{ USERS : "1:N autoriza rol"

    USERS ||--|| USER_PROFILES : "1:1 tiene perfil"
    USERS ||--o{ REFRESH_TOKENS : "1:N posee tokens"
    USERS ||--o{ PUBLICACIONES : "1:N escribe"
    USERS |o--o{ RESTAURANTS : "0..1:N gerencia"
    USERS ||--o{ RESTAURANT_STAFF : "N:M trabaja en"
    USERS ||--o{ WAITLIST_ENTRIES : "1:N solicita turno"
    USERS ||--o{ NOTIFICATIONS : "1:N recibe"

    RESTAURANTS ||--o{ RESTAURANT_STAFF : "N:M tiene personal"
    RESTAURANTS ||--o{ WAITLIST_ENTRIES : "1:N tiene fila"
    RESTAURANTS ||--o{ DAILY_ANALYTICS : "1:N analitica diaria"
    RESTAURANTS ||--o{ HOURLY_ANALYTICS : "1:N analitica horaria"
    RESTAURANTS ||--o{ RESTAURANT_AMENITIES : "N:M ofrece"

    WAITLIST_ENTRIES |o--o{ NOTIFICATIONS : "0..1:N desencadena"
    AMENITIES ||--o{ RESTAURANT_AMENITIES : "N:M esta en"

    ROLE_PERMISSIONS {
        user_role role PK
        boolean can_manage_platform
        boolean can_manage_restaurant
        boolean can_manage_waitlist
        boolean can_join_waitlist
        boolean can_view_analytics
        text description
    }

    USERS {
        uuid id PK
        varchar name
        varchar email UK
        varchar phone
        varchar password_hash
        user_role role FK
        boolean is_active
        timestamptz created_at
        timestamptz updated_at
    }

    USER_PROFILES {
        uuid user_id PK
        text bio
        varchar avatar_url
        jsonb preferences
        timestamptz updated_at
    }

    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        varchar token_hash
        timestamptz expires_at
        timestamptz created_at
    }

    RESTAURANTS {
        uuid id PK
        varchar name
        varchar cuisine
        varchar address
        numeric lat
        numeric lng
        int table_count
        restaurant_status status
        int estimated_wait_minutes
        uuid manager_id FK
        timestamptz created_at
        timestamptz updated_at
    }

    RESTAURANT_STAFF {
        uuid id PK
        uuid restaurant_id FK
        uuid user_id FK
        timestamptz assigned_at
    }

    WAITLIST_ENTRIES {
        uuid id PK
        uuid restaurant_id FK
        uuid user_id FK
        int party_size
        waitlist_status status
        int position
        timestamptz registered_at
        timestamptz called_at
        timestamptz arrived_at
        timestamptz cancelled_at
    }

    NOTIFICATIONS {
        uuid id PK
        uuid waitlist_entry_id FK
        uuid user_id FK
        varchar channel
        text message
        varchar status
        timestamptz sent_at
    }

    DAILY_ANALYTICS {
        uuid id PK
        uuid restaurant_id FK
        date report_date
        int total_entries
        int no_shows
        int avg_wait_minutes
        smallint peak_hour
    }

    HOURLY_ANALYTICS {
        uuid id PK
        uuid restaurant_id FK
        date report_date
        smallint hour
        int entries
    }

    PUBLICACIONES {
        uuid id PK
        uuid user_id FK
        varchar title
        text content
        timestamptz created_at
    }

    AMENITIES {
        uuid id PK
        varchar name UK
        text description
    }

    RESTAURANT_AMENITIES {
        uuid restaurant_id PK
        uuid amenity_id PK
        timestamptz linked_at
    }
